logs/dag_id=etl_store/run_id=manual__2024-07-08T155713.567728+0000/task_id=schema_create/attempt=2.log
[2024-07-08T15:59:02.877+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-08T15:59:02.908+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_store.schema_create manual__2024-07-08T15:57:13.567728+00:00 [queued]>
[2024-07-08T15:59:02.917+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_store.schema_create manual__2024-07-08T15:57:13.567728+00:00 [queued]>
[2024-07-08T15:59:02.918+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-07-08T15:59:02.935+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): schema_create> on 2024-07-08 15:57:13.567728+00:00
[2024-07-08T15:59:02.940+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=173) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-08T15:59:02.942+0000] {standard_task_runner.py:63} INFO - Started process 175 to run task
[2024-07-08T15:59:02.942+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_store', 'schema_create', 'manual__2024-07-08T15:57:13.567728+00:00', '--job-id', '31', '--raw', '--subdir', 'DAGS_FOLDER/etl_store.py', '--cfg-path', '/tmp/tmpd1tx4elj']
[2024-07-08T15:59:02.945+0000] {standard_task_runner.py:91} INFO - Job 31: Subtask schema_create
[2024-07-08T15:59:03.011+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_store.schema_create manual__2024-07-08T15:57:13.567728+00:00 [running]> on host a58d746d8a30
[2024-07-08T15:59:03.120+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_store' AIRFLOW_CTX_TASK_ID='schema_create' AIRFLOW_CTX_EXECUTION_DATE='2024-07-08T15:57:13.567728+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-08T15:57:13.567728+00:00'
[2024-07-08T15:59:03.121+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-08T15:59:03.134+0000] {sql.py:276} INFO - Executing: 
    -- Создание схем, если таковых нет
    create schema if not exists postgres.nds;
    create schema if not exists postgres.dds;
    create schema if not exists postgres.stg;
[2024-07-08T15:59:03.149+0000] {base.py:84} INFO - Using connection ID 'postgres-netology' for task execution.
[2024-07-08T15:59:03.161+0000] {base.py:84} INFO - Using connection ID 'postgres-netology' for task execution.
[2024-07-08T15:59:03.183+0000] {sql.py:487} INFO - Running statement: 
    -- Создание схем, если таковых нет
    create schema if not exists postgres.nds;
    create schema if not exists postgres.dds;
    create schema if not exists postgres.stg;, parameters: None
[2024-07-08T15:59:03.189+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-08T15:59:03.189+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 3:     create schema if not exists postgres.nds;
                                                ^

[2024-07-08T15:59:03.204+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=etl_store, task_id=schema_create, run_id=manual__2024-07-08T15:57:13.567728+00:00, execution_date=20240708T155713, start_date=20240708T155902, end_date=20240708T155903
[2024-07-08T15:59:03.219+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 31 for task schema_create (syntax error at or near "."
LINE 3:     create schema if not exists postgres.nds;
                                                ^
; 175)
[2024-07-08T15:59:03.237+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-08T15:59:03.254+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-07-08T15:59:03.271+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-08T15:59:03.278+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
